--- a/html/kode-warna-universal.html
+++ b/html/kode-warna-universal.html
@@ -5,20 +5,17 @@
 <title>Kode Warna Universal</title>
 <style type="text/css">
 	body {
-		background-color:#ddd;
+		background-color:#454545;
 		padding:20px;
 		font:normal 12px Segoe UI;
-		color:#333;
+		color:#ddd;
 	}
 
 </style>
 </head>
 <body>
-#kodewarna {
-  text-align:center;
-}
 </style>
-<div id='kodewarna'>
+<div style="text-align: center;">
 <object border="0" classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" height="480" id="obj1" width="480"> <param value="http://www.2createawebsite.com/build/color.swf" name="movie">
     <param value="High" name="quality">
     <embed pluginspage="http://www.macromedia.com/go/getflashplayer" quality="High" src="http://www.2createawebsite.com/build/color.swf" name="obj1" type="application/x-shockwave-flash" width="485" height="485"></embed> </object>
