--- a/html/facebook-fanspage-mdf.html
+++ b/html/facebook-fanspage-mdf.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Konversi Kode HTML</title>
+<title>Like Facebook Page MDF-Blog</title>
 <style type="text/css">
 	body {
 		background-color:#fff:
