--- a/html/emoticon.html
+++ b/html/emoticon.html
@@ -86,8 +86,8 @@ input.emoKey {
   margin:0px 0px 0px 2px;
   color:rgb(34, 34, 34);
 }
-.emo.delayLoad img {
-  padding:1px 
+.emo.delayLoad {
+  padding:2px; 
 }
 </style>
 </head>
