--- a/html/emoticon.html
+++ b/html/emoticon.html
@@ -71,6 +71,7 @@ body{background:white;color:#333;}
   padding:10px;
   margin-bottom:7px;
   background:#fff;
+  font-size:12px;
 }
 img.emo, input.emoKey {
   display:inline-block; /* Penting! */
