--- a/html/emoticon.html
+++ b/html/emoticon.html
@@ -71,8 +71,10 @@ body{background:white;color:#333;}
   padding:10px;
   margin-bottom:7px;
   background:#fff;
-  font-size:12px;
+  font:normal 12px Arial;
+  color:#333;
 }
+
 img.emo, input.emoKey {
   display:inline-block; /* Penting! */
   *display:inline;
@@ -87,6 +89,7 @@ input.emoKey {
   margin:0px 0px 0px 2px;
   color:rgb(34, 34, 34);
 }
+
 .emo.delayLoad {
   padding:2px; 
 }
@@ -97,7 +100,7 @@ input.emoKey {
 <script type="text/javascript">
 jQuery(document).ready(function () {emoticonx({
 emoRange:"#comments p, div.emoWrap",
-putEmoAbove:"#agitganteng",
+putEmoAbove:"#mdf",
 topText:"Klik untuk melihat code!",
 emoMessage:"Untuk memasukkan emoticon setidaknya ada satu spasi sebelum kode emoticon."
 })
@@ -169,6 +172,6 @@ window.emoticonx = (function () {
     }
 })();
 </script>
-<div id="agitganteng"/>
+<div id="mdf"/>
 
 </body></html>
