--- a/html/emoticon.html
+++ b/html/emoticon.html
@@ -110,7 +110,7 @@ emoMessage:"Untuk memasukkan emoticon setidaknya ada satu spasi sebelum kode emo
 window.emoticonx = (function () {
     var b = function (m) {
         var j = m || {}, l = j.emoRange || "#comments p, div.emoWrap",
-            k = j.putEmoAbove || "#agitganteng",
+            k = j.putEmoAbove || "#mdf",
             h = j.topText || "Klik untuk melihat kode!",
             a = j.emoMessage || "Untuk memasukkan emoticon setidaknya ada satu spasi sebelum kode emoticon.";
         $(k).before('<div style="text-align:center" class="emoWrap"> :) :)) ;(( :-) =)) ;( ;-( :d :-d @-) :p :o :&gt;) (o) [-( :-? (p) :-s (m) 8-) :-t :-b  b-( :-# =p~ $-) (b) (f) x-) (k) (h) (c) cheer <br/><b>' + h + "</b><br/>" + a + "</div>");
