--- a/html/konversi-kode-escaper.html
+++ b/html/konversi-kode-escaper.html
@@ -5,7 +5,7 @@
 <title>Konversi Kode HTML</title>
 <style type="text/css">
 	body {
-		background-color:#333;
+		background-color:#0070b0;
 		padding:20px;
 		font:normal 11px Tahoma,Verdana,Arial,Sans-Serif;
 		color:#999;
