--- a/html/html-escaper.html
+++ b/html/html-escaper.html
@@ -5,7 +5,7 @@
 <title>Konversi Kode HTML</title>
 <style type="text/css">
 	body {
-		background-color:#0070b0;
+		background-color:#002C5E;
 		padding:20px;
 		font:normal 11px Tahoma,Verdana,Arial,Sans-Serif;
 		color:#f8f8f8;
