--- a/html/html-escaper.html
+++ b/html/html-escaper.html
@@ -12,7 +12,7 @@
 	}
 
 	p {margin-top:20px;}
-	code {color:#aa2;}
+	code {color:black;}
 	
 	#codes {
 		border:none;
@@ -20,7 +20,7 @@
 		height:200px;
 		margin:10px auto 10px;
 		display:block;
-		background-color:#444;
+		background-color:#ddd;
 		padding:5px;
 		font:normal 12px 'Courier New',Monospace;
 	}
