--- a/html/html-escaper.html
+++ b/html/html-escaper.html
@@ -12,7 +12,7 @@
 	}
 
 	p {margin-top:20px;}
-	code {color:black;}
+	code {color:gold;}
 	
 	#codes {
 		border:none;
@@ -25,7 +25,7 @@
 		font:normal 12px 'Courier New',Monospace;
 	}
 	
-	#codes:focus {background-color:#3c3c3c;color:white;}
+	#codes:focus {background-color:#f5f5f5;color:black;}
 
 	.button-group {
 		margin:0px auto 0px;
@@ -33,7 +33,7 @@
 	}
 	
 	button,button[disabled]:active {
-		background-color:#3c3c3c;
+		background-color:#0070b0;
 		font:bold 11px Tahoma,Verdana,Arial,Sans-Serif;
 		color:#f7f7f7;
 		padding:5px 10px;
