--- a/html/Contact.html
+++ b/html/Contact.html
@@ -60,6 +60,7 @@ margin-top:35px;
 <script type="text/javascript" src="//www.blogger.com/static/v1/widgets/2292841073-widgets.js"/>
 </head>
 <body>
+<div id="ContactForm1">
 <form name="contact-form">
 <p></p>
 Nama
@@ -80,6 +81,7 @@ Isi Pesan <span style="color: red; font-weight: bolder;">*</span>
 </div>
 </div>
 </form>
+</div>
 <script type="text/javascript">
 if (window.jstiming) window.jstiming.load.tick('widgetJsBefore');
 </script><script type="text/javascript" src="//www.blogger.com/static/v1/widgets/2292841073-widgets.js"></script>
